# rshellweg

./: .agignore  .envrc  .gitignore  .gitmodules  .travis.yml  Beam.cpp  BeamSolver.cpp  GeometryForm.cpp  GeometryForm.h  Hellweg.cbproj  Hellweg.cpp  Hellweg.res  MainUnit.cpp  Matrix.cpp  OptimizerForm.dfm  OptimizerResults.h  OptimizerUnit.cpp  OptimizerUnit.h  README.md  ResultsForm.cpp  ResultsForm.dfm  SmartProgressBar.cpp  Spectrum.cpp  Spline.cpp  Types.h  base_pkconfig.py  makefile  pyhellweg.c  pyhellweg.cpp  pyhellweg.pyx  requirements.txt  setup.py
__history/: Beam.cpp.~1~
debug/: README.md  input.txt  rshellweg.ini  test.py
docs/: hellweg2d_input_file_guide.txt  hellweg2d_interface_guide.docx  hellweg2d_user_guide.docx  hellweg_user_guide.docx  index.rst  ~$llweg2d_interface_guide.docx
docs.old/: hellweg2d_input_file_guide.txt  hellweg2d_interface_guide.docx
docs/notes_eidelman/: 3D_implemetnation_122616.docx  hybridWaves_diskLoadedWaveguides.docx  nonsymmetricWave_HE11_draft.docx  nonsymmetricWave_HE11_oldVersion.docx  particleMotion_in_Hellweg3D.docx
docs_Eidelman/: beamSizeWithSpaceChargeEffect-Phase_N10000.docx  benchmarkingHellweg3DequationsOfmotion.docx  dispersionEquation_HE11..m  garnett_wangler_NpointsGaussIntegration.docx  garnett_wangler_reproducing.docx  nonsymmetricWave_HE11_draft.docx  particleMotion_in_Hellweg3D.docx  physics_in_Hellweg2D.docx  spChrg_hellweg_ASTRA_comparison.txt  spaceCharge_Garnette-Wangler_receiving_last.docx
docs_Eidelman/brillouinFlow/: BrillouinFlow.docx  README.txt  ~$illouinFlow.docx
examples/DLS Auto/: INPUT_TEST.txt
examples/Problem 1 - Drift Tube/: INPUT.txt  drift_tube.pit
examples/Problem 2 - Space Charge/: cst_spch_03A.pit  cst_spch_0A.pit  cst_spch_6A_500.pit  hwg_spch_01.pit  hwg_spch_0A_500.pit  hwg_spch_1A_ass.pit  hwg_spch_3A_ass.pit  wb6dt2.txt
examples/Problem 3 - Quadrupole/: INPUT.txt
examples/Problem 4 - Solenoid/: SOLENOID1D.txt  SOLENOID2DS.txt
examples/Problem 7 - Ions/: INPUT.txt
examples/User Defined Structure/: INPUT_NSRL.txt
examples/divergent_beam_cst/: divergent_beam_30kev.txt  main.py
examples/divergent_beam_sce/: divergent_beam_sce_30kev.txt
examples/ex00_test/: main.py  solenoid.txt  test_01.ipynb
examples/ex02_space_charge/: INPUT.txt  INPUT_multi-bunch.txt  cst_spch_01A.pit  cst_spch_05A_ass.pit  (+27 more)
hellweg2d/: __init__.py  cmd.py
inputFiles/: INPUT_30keV_cst_divergentBeam_updatedHellweg.txt  INPUT_500Gs30keV.txt
matlabTools/: astraOutputFilesAnalyser.m  dispersionCurves.m  ellipsPlaying.m  formfactorMx.data  formfactorMy.data  formfactorMyHellweg.data  formfactors.m  garnett_wangler_verification.m  myfunFrNew.m  spaceChargeEffect.m
rshellweg/: rshellweg_console.py  solver.py
rslinac/: __init__.py  base_pkconfig.py  beam_solver.py  rslinac_console.py  solver.py
src/: .gitignore  Beam.cpp  Beam.h  BeamSolver.cpp  BeamSolver.h  ConstUnit.h  GeometryForm.cpp  GeometryForm.h  Hellweg.cbproj  Hellweg.cbproj.local  Hellweg.cpp  Hellweg.res  Hellweg.stat  MainUnit.cpp  MainUnit.h  Matrix.cpp  Matrix.h  Optimizer.cpp  Optimizer.h  OptimizerResults.cpp  OptimizerResults.h  OptimizerUnit.dfm  ResultsForm.h  SmartProgressBar.cpp  SmartProgressBar.h  Spectrum.h  Spline.h  Types.h
src/libHellweg2D/: AnsiString.cpp  AnsiString.hpp  CMakeLists.txt  IniFiles.cpp  IniFiles.hpp  Math.hpp  SysUtils.hpp  TStringList.cpp  TStringList.hpp  libHellweg2D.cpp  libHellweg2D.h  radia_utils.h
src/libHellweg2D/test/: CMakeLists.txt  testAnsiString.cpp  testHellweg2D.cpp  testTIniFile.cpp
tests/: conftest.py  import_test.py
vagrant/: Vagrantfile
(+1040 files in other folders)
